--- a/product_marble/views/product_view.xml
+++ b/product_marble/views/product_view.xml
@@ -69,7 +69,7 @@
                 <page string="Information">
                     <group colspan="4">
                         <group>
-                            <field name="categ_id"/>
+                            <field name="categ_id" widget="radio"/>
                             <field name="prod_type" invisible="1"/>
                             <field name="type" attrs="{'readonly':[('prod_type','in',['raw','bacha','input'])]}"/>
                             <field name="uom_id" 
