--- a/product_marble/views/res_partner_view.xml
+++ b/product_marble/views/res_partner_view.xml
@@ -1,21 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
     <data>
-
-        <!--record id="view_marble_partner_form" model="ir.ui.view">
-            <field name="name">res.partner.form</field>
-            <field name="model">res.partner</field>
-            < ! - - field eval="1" name="priority"/ - - >
-            <field name="inherit_id" ref="base.view_partner_form"/>
-            <field name="arch" type="xml">
-
-                <field name="ref"       position="replace"/>
-                <field name="lang"  position="replace"/>
-                <field name="date"  position="replace"/>
-                
-            </field>
-        </record-->
-
         <!-- email_template.res_partner_opt_out_form -->
 
         <record id="view_marble_partner_property_form" model="ir.ui.view">
@@ -24,15 +9,6 @@
             <field name="inherit_id" ref="purchase.view_partner_property_form"/>
             <!--field name="priority">36</field-->
             <field name="arch" type="xml">
-
-                <field name="ref"     position="replace"/>
-                <field name="lang"    position="replace"/>
-                <field name="date"    position="replace"/>
-                <field name="opt_out" position="replace"/>
-                <field name="property_stock_customer"   position="replace"/>
-                <field name="property_stock_supplier"   position="replace"/>
-
-
                 <page string="Contacts" position="after">
                 <page string="Workss" attrs="{'invisible': [('is_company','=',False), ('child_ids', '=', [])]}" autofocus="autofocus">
                     <field name="works_ids" mode="kanban" context="{'default_parent_id': active_id, 'default_street': street, 'default_street2': street2, 'default_city': city, 'default_state_id': state_id, 'default_zip': zip, 'default_country_id': country_id, 'default_supplier': supplier, 'default_customer': customer, 'default_use_parent_address': True}">
@@ -141,46 +117,24 @@
                     </field>
                 </page>
                 </page>
-
-                <page string="Accounting" position="replace">
-                <page string="Accounting" col="4" name="accounting" attrs="{'invisible': [('is_company','=',False),('parent_id','!=',False)]}" 
-                      groups="account.group_account_invoice,product_marble.group_sale_adminis,product_marble.group_pruchase_adminis,product_marble.group_stock_mger">
-                    <group>
-                        <group>
-                            <field name="property_account_position" widget="selection" invisible="1"/>
-                        </group>
-                        <group>
-                            <field name="last_reconciliation_date" invisible="1"/>
-                        </group>
-                        <group>
-                            <field name="property_account_receivable" groups="account.group_account_invoice" invisible="1"/>
-                            <field name="property_payment_term" widget="selection"/>
-                            <field name="credit"/>
-                            <field name="credit_limit"/>
-                        </group>
-                        <group>
-                            <field name="property_account_payable" groups="account.group_account_invoice" invisible="1"/>
-                            <field name="property_supplier_payment_term" widget="selection"/>
-                            <field name="debit"/>
-                        </group>
-                    </group>
-                    <field name="bank_ids" context="{'default_partner_id': active_id, 'form_view_ref': 'base.view_partner_bank_form'}">
-                        <tree string="Bank Details">
-                            <field name="state" invisible="1"/>
-                            <field name="sequence" invisible="1"/>
-                            <field name="acc_number"/>
-                            <field name="bank_name"/>
-                            <field name="owner_name"/>
-                        </tree>
-                    </field>
-                </page>
-                <page string="Accounting" name="accounting_disabled" attrs="{'invisible': ['|',('is_company','=',True),('parent_id','=',False)]}" 
-                      groups="account.group_account_invoice,product_marble.group_sale_adminis,product_marble.group_pruchase_adminis,product_marble.group_stock_mger">
-                    <div>
-                        <p>Accounting-related settings are managed on <button name="open_commercial_entity" type="object" string="the parent company" class="oe_link"/></p>
-                    </div>
-                </page>
-                </page>
+		<xpath expr="//page[@string='Accounting']" position="attributes">
+		    <attribute name="groups">account.group_account_invoice,product_marble.group_sale_adminis,product_marble.group_pruchase_adminis,product_marble.group_stock_mger</attribute>
+		</xpath>
+		<xpath expr="//field[@name='last_reconciliation_date']" position="replace">
+		      <field name="last_reconciliation_date" invisible="1"/>
+		</xpath>
+		<xpath expr="//field[@name='lang']" position="replace">
+		      <field name="lang" invisible="1"/>
+		</xpath>
+		<xpath expr="//field[@name='date']" position="replace">
+		      <field name="date" invisible="1"/>
+		</xpath>
+		<xpath expr="//field[@name='property_account_payable']" position="replace">
+		      <field name="property_account_payable" invisible="1"/>
+		</xpath>
+		<xpath expr="//field[@name='property_account_receivable']" position="replace">
+		      <field name="property_account_receivable" invisible="1"/>
+		</xpath>
             </field>
         </record>
 
