--- a/product_marble/views/res_partner_view.xml
+++ b/product_marble/views/res_partner_view.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
     <data>
+
+       <record id="view_marble_res_partner_filter" model="ir.ui.view">
+            <field name="name">res.partner.select</field>
+            <field name="model">res.partner</field>
+            <field name="inherit_id" ref="base.view_res_partner_filter"/>
+            <field name="arch" type="xml">
+               <filter string="Suppliers" position="after">
+                   <filter string="Works" name="is_work" domain="[('is_work','=',True)]" help="Works Partners"/>
+               </filter>
+            </field>
+        </record>
+ 
+
+
         <record id="view_marble_partner_property_form" model="ir.ui.view">
             <field name="name">res.partner.purchase.property.form.inherit</field>
             <field name="model">res.partner</field>
