Se agregan los menues y los filtros de obras

--- a/product_marble/views/marble_actions.xml
+++ b/product_marble/views/marble_actions.xml
@@ -79,6 +79,29 @@
         </field>
     </record>
 
+    <!-- Works -->
+    <record id="act_open_works_view" model="ir.actions.act_window">
+        <field name="name">Works</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">res.partner</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_type">form</field>
+        <field name="context">{"search_default_is_work":1}</field>
+        <field name="help" type="html">
+          <p class="oe_view_nocontent_create">
+            Click to define a new product.
+          </p><p>
+            You must define a product for everything you sell, whether it's
+            a physical product, a consumable or a service you offer to
+            customers.
+          </p><p>
+            The product form contains information to simplify the sale
+            process: price, notes in the quotation, accounting data,
+            procurement methods, etc.
+          </p>
+        </field>
+    </record>
+
 
 </data>
 </openerp>
