--- a/product_marble/views/res_partner_view.xml
+++ b/product_marble/views/res_partner_view.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
     <data>
+      <!-- - - - - - - - - - - - - - Searchs - - - - - - - - - -->
+
+      <record id="view_marble_res_partner_filter" model="ir.ui.view">
+            <field name="name">res.partner.select</field>
+            <field name="model">res.partner</field>
+            <field name="inherit_id" ref="base.view_res_partner_filter"/>
+            <field name="arch" type="xml">
+               <filter string="Suppliers" position="after">
+                   <filter string="Works" name="is_work" domain="[('is_work','=',True)]" help="Works Partners"/>
+               </filter>
+            </field>
+       </record>
+
         <record id="view_marble_partner_property_form" model="ir.ui.view">
             <field name="name">res.partner.purchase.property.form.inherit</field>
             <field name="model">res.partner</field>
@@ -8,17 +21,39 @@
             <!--field name="priority">36</field-->
             <field name="arch" type="xml">
 
-                <field name="ref"     position="replace"/>
-                <field name="lang"    position="replace"/>
-                <field name="date"    position="replace"/>
-                <field name="opt_out" position="replace"/>
-                <field name="property_stock_customer"   position="replace"/>
-                <field name="property_stock_supplier"   position="replace"/>
 
-                <field name="is_company" position="attributes">
-                    <attribute name="on_change" />
-                </field>
+		<xpath expr="//form[@string='Partners']//sheet//div[@class='oe_title oe_left']//div[@class='oe_edit_only']" position="replace">
+			<div class="oe_edit_only">
+				<label for="name"/>
+				<span attrs="{'invisible':[('is_work','=',True)]}"> ( </span>
+				<field name="is_company" on_change="onchange_type(is_company)" class="oe_inline" attrs="{'invisible':[('is_work','=',True)]}"/> 
+				<label for="is_company" string="Is a Company?" attrs="{'invisible':[('is_work','=',True)]}"/>
+				<span attrs="{'invisible':[('is_work','=',True)]}"> ) </span>
+			</div>
+		</xpath>
 
+		<field name="is_company" position="attributes">
+			<attribute name="on_change" />
+			<attribute name="attrs">{'invisible': [('is_work','=',True)]}</attribute>
+		</field> 
+		<field name="last_reconciliation_date" position="attributes">
+			<attribute name="attrs">{'invisible': True}</attribute>
+		</field> 
+		<field name="property_account_payable" position="attributes">
+			<attribute name="attrs">{'invisible': True}</attribute>
+		</field> 
+		<field name="property_account_receivable" position="attributes">
+			<attribute name="attrs">{'invisible': True}</attribute>
+		</field> 
+		<field name="date" position="attributes">
+			<attribute name="attrs">{'invisible': True}</attribute>
+		</field> 
+		<field name="lang" position="attributes">
+			<attribute name="attrs">{'invisible': True}</attribute>
+		</field> 
+		<page name="sales_purchases" position="attributes">
+		  <attribute name="attrs">{'invisible': [('is_work','=',True)]}</attribute>
+		</page>
                 <page string="Accounting" position="attributes">
                     <attribute name="groups">account.group_account_invoice,product_marble.group_sale_adminis,product_marble.group_pruchase_adminis,product_marble.group_stock_mger</attribute>
                 </page>
@@ -30,7 +65,7 @@
 
                <page string="Contacts" position="after">
                 <page string="Works" attrs="{'invisible': [('has_works','=',False)]}">
-                    <field name="works_ids" mode="kanban" context="{'is_work': True,'default_parent_id': active_id, 'default_street': street, 'default_street2': street2, 'default_city': city, 'default_state_id': state_id, 'default_zip': zip, 'default_country_id': country_id, 'default_supplier': supplier, 'default_customer': customer, 'default_use_parent_address': True}">
+                    <field name="works_ids" mode="kanban" context="{'is_company': True,'is_work': True,'default_parent_id': active_id, 'default_street': street, 'default_street2': street2, 'default_city': city, 'default_state_id': state_id, 'default_zip': zip, 'default_country_id': country_id, 'default_supplier': supplier, 'default_customer': customer, 'default_use_parent_address': True}">
                         <kanban>
                             <field name="color"/>
                             <field name="name"/>
@@ -104,7 +139,6 @@
                                     <field name="category_id" widget="many2many_tags" placeholder="Tags..." style="width: 70%%"/>
                                 </div>
                                 <group>
-                                    <field name="function" placeholder="e.g. Sales Director"/>
                                     <field name="email"/>
                                     <field name="phone"/>
                                     <field name="mobile"/>
@@ -132,30 +166,14 @@
                                 <field name="supplier" invisible="True"/>
                                 <field name="customer" invisible="True"/>
                                 <field name="is_work" invisible="True"/>
+                                <field name="is_company" invisible="True"/>
                             </sheet>
                         </form>
                     </field>
                 </page>
                 </page>
 
-                <!--xpath expr="//page[@string='Accounting']" position="attributes">
-                    <attribute name="groups">account.group_account_invoice,product_marble.group_sale_adminis,product_marble.group_pruchase_adminis,product_marble.group_stock_mger</attribute>
-                </xpath>
-                <xpath expr="//field[@name='last_reconciliation_date']" position="replace">
-                      <field name="last_reconciliation_date" invisible="1"/>
-                </xpath>
-                <xpath expr="//field[@name='lang']" position="replace">
-                      <field name="lang" invisible="1"/>
-                </xpath>
-                <xpath expr="//field[@name='date']" position="replace">
-                      <field name="date" invisible="1"/>
-                </xpath>
-                <xpath expr="//field[@name='property_account_payable']" position="replace">
-                      <field name="property_account_payable" invisible="1"/>
-                </xpath>
-                <xpath expr="//field[@name='property_account_receivable']" position="replace">
-                      <field name="property_account_receivable" invisible="1"/>
-                </xpath-->
+
 
             </field>
         </record>
