--- a/product_marble/views/stock_change_product_qty_view.xml
+++ b/product_marble/views/stock_change_product_qty_view.xml
@@ -6,6 +6,9 @@
             <field name="model">stock.change.product.qty</field>
             <field name="inherit_id" ref="stock.view_change_product_quantity"/>
             <field name="arch" type="xml">
+                <field name="location_id" position="attributes">
+			<attribute name="attrs">{'invisible': True}</attribute>
+		</field> 
                 <field name="new_quantity" position="replace"/>
                 <field name="product_id" position="replace">
 
