--- a/product_marble/views/product_view.xml
+++ b/product_marble/views/product_view.xml
@@ -50,7 +50,7 @@
         <record id="view_product_marble_form" model="ir.ui.view">
             <field name="name">product.marble.form</field>
             <field name="model">product.template</field>
-            <field name="priority">16</field>
+            <field name="priority">10</field>
             <field name="inherit_id" ref="product.product_template_form_view"/>
             <field name="arch" type="xml">
                <!-- 2014.09.21 - arosenbrock - bug in v8.0 Final -->
@@ -146,46 +146,12 @@
         <record id="view_product_product_marble_form" model="ir.ui.view">
             <field name="name">product.product.dim.form</field>
             <field name="model">product.product</field>
-            <field name="priority">18</field>
+            <field name="priority">16</field>
             <field name="inherit_id" ref="product.product_normal_form_view"/>
             <field name="arch" type="xml">
-   <page string="Information" position="replace">
-                <page string="Information">
-                    <group colspan="4">
-                        <group>
-                            <field name="categ_id" widget="radio"/>
-                            <field name="prod_type" invisible="1"/>
-                            <field name="type" attrs="{'readonly':[('prod_type','in',['raw','bacha','input'])]}"/>
-                            <field name="uom_id" 
-                                  attrs="{'readonly':[('prod_type','in',['raw','bacha'])]}" 
-                                  on_change="onchange_uom(uom_id,uom_po_id)"
-                                  groups="product.group_uom"
-                            />
-                        </group>
-                        <group>
-                            <field name="active"/>
-                            <field name="list_price"/>
-                        </group>
-                    </group>
-                    <group colspan="4">
-                        <field name="company_id" groups="base.group_multi_company" widget="selection"/>
-                    </group>
-                    <field name="description" placeholder="describe the product characteristics..."/>
-                    <!--field name="is_raw" invisible="1"/>
-                    <field name="is_bacha" invisible="1"/>
-                    <field name="is_input" invisible="1"/>
-                    <field name="uom_readonly" invisible="1"/-->
-                </page>
-                <page string="Raw Material" attrs="{'invisible':[('prod_type','!=','raw')]}">
-                    <group colspan="4">
-                        <group>
-                            <field name="raw_material"/>
-                            <field name="raw_color"/>
-                        </group>
-                        <group>
-                            <field name="raw_finished"/>
-                        </group>
-                    </group>
+
+   		<page string="Information" position="after">
+                <page string="Stock Materia Prima" attrs="{'invisible':[('prod_type','!=','raw')]}">
                     <notebook>
                         <page string="Dimensions">
                             <field name="dimension_ids" context="{'product_id':id}">
@@ -216,24 +182,6 @@
                             </field>
                         </page>
                     </notebook>
-
-                </page>
-                <page string="Bacha" attrs="{'invisible':[('prod_type','!=','bacha')]}">
-                    <group colspan="4">
-                        <group>
-                            <field name="bacha_tipo"/>
-                            <field name="bacha_marca"/>
-                            <field name="bacha_material"/>
-                            <field name="bacha_acero"/>
-                            <field name="bacha_colocacion"/>
-                        </group>
-                        <group>
-                            <field name="bacha_ancho"/>
-                            <field name="bacha_largo"/>
-                            <field name="bacha_prof"/>
-                            <field name="bacha_diam"/>
-                        </group>
-                    </group>
                 </page>
             </page>
            </field>
