--- a/product_marble/views/marble_actions.xml
+++ b/product_marble/views/marble_actions.xml
@@ -102,6 +102,77 @@
         </field>
     </record>
 
+    <!-- Works -->
+    <record id="act_open_works_view" model="ir.actions.act_window">
+        <field name="name">Works</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">res.partner</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_type">form</field>
+        <field name="context">{"search_default_is_work":1}</field>
+        <field name="help" type="html">
+          <p class="oe_view_nocontent_create">
+            Click to define a new product.
+          </p><p>
+            You must define a product for everything you sell, whether it's
+            a physical product, a consumable or a service you offer to
+            customers.
+          </p><p>
+            The product form contains information to simplify the sale
+            process: price, notes in the quotation, accounting data,
+            procurement methods, etc.
+          </p>
+        </field>
+    </record>
 
+    <!-- RAW -->
+    <record id="act_open_raw_view" model="ir.actions.act_window">
+        <field name="name">Raw Material</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">product.product</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_type">form</field>
+        <field name="context">{"search_default_raw":1}</field>
+    </record>
+
+    <!-- Input -->
+    <record id="act_open_input_view" model="ir.actions.act_window">
+        <field name="name">Input</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">product.template</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_type">form</field>
+        <field name="context">{"search_default_input":1}</field>
+    </record>
+
+    <!-- Input Variant -->
+    <record id="act_open_inputv_view" model="ir.actions.act_window">
+        <field name="name">Input</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">product.product</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_type">form</field>
+        <field name="context">{"search_default_input":1}</field>
+    </record>
+
+    <!-- Bacha -->
+    <record id="act_open_bacha_view" model="ir.actions.act_window">
+        <field name="name">Bacha</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">product.product</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_type">form</field>
+        <field name="context">{"search_default_bacha":1}</field>
+    </record>
+
+    <!-- Service -->
+    <record id="act_open_service_view" model="ir.actions.act_window">
+        <field name="name">Service</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">product.product</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_type">form</field>
+        <field name="context">{"search_default_service":1}</field>
+    </record>
 </data>
 </openerp>
