--- a/product_marble/views/product_view.xml
+++ b/product_marble/views/product_view.xml
@@ -10,11 +10,10 @@
                 <group string="Group by..." position="before">
                     <newline/>
                     <field name="prod_type"/>
-                    <filter sring="Raw Material" domain="[('prod_type','=','raw')]" help="Raw Material products" /> 
-                    <filter string="Bachas"   domain="[('prod_type','=','bacha')]" help="Bachas products" />
-                    <filter string="Inputs"   domain="[('prod_type','=','input')]" help="Inputs products" />
-                    <filter string="Services" domain="[('prod_type','=','service')]" help="Services products" />
-                    <filter string="Works" domain="[('is_works','=','True')]" help="Works" />
+                    <filter sring="Raw Material" name="raw" domain="[('prod_type','=','raw')]" help="Raw Material products" /> 
+                    <filter string="Bachas"   name="bacha" domain="[('prod_type','=','bacha')]" help="Bachas products" />
+                    <filter string="Inputs"   name="input" domain="[('prod_type','=','input')]" help="Inputs products" />
+                    <filter string="Services" name="service" domain="[('prod_type','=','service')]" help="Services products" />
                 </group>
                 <group string="Group by..." position="inside">
                     <filter name="prod_type" string="Product Type" domain="[]" context="{'group_by':'prod_type'}" />
@@ -128,18 +127,6 @@
                 <page name="variants" position="attributes">
                     <attribute name="attrs">{'invisible':[('prod_type','!=','input')]}</attribute>
                 </page>
-            </field>
-        </record>
-
-        <record id="product_template_hide_inventory_marble_view" model="ir.ui.view">
-            <field name="name">product.template.inventory.form</field>
-            <field name="model">product.template</field>
-            <field name="priority" eval="9" />
-            <field name="inherit_id" ref="stock.view_template_property_form"/>
-            <field name="arch" type="xml">
-                <xpath expr="//group[@name='store'][2]" position="attributes">
-			<attribute name="attrs">{'invisible': True}</attribute>					
-                </xpath>		
             </field>
         </record>
 
